2004-01-18  Alexander V. Lukyanov <lav@yars.free.net>

	* ResMgr.cc: better charset test.
	* resource.cc: file:charset new setting; set it from nl_langinfo(CODESET).
	* SFtp.cc: move is_valid_reply to Packet class; drop unused is_valid_status.
	* buffer.cc: use file:charset instead of unportable "char".

2004-01-16  Alexander V. Lukyanov <lav@yars.free.net>

	* PtyShell.cc: call TIOCSCTTY on FD 2 instead of FD 0, as it is a tty
	  even if use_pipes==true.
	* ResMgr.cc, ResMgr.h: (CharsetValidate) new static method.
	* buffer_ssl.cc: allow translation.
	* ftpclass.cc, ftpclass.h: implement recoding from any server charset.
	* resource.cc: new setting ftp:charset.

2004-01-15  Alexander V. Lukyanov <lav@yars.free.net>

	* buffer.h: use CDECL around iconv.h.
	* buffer.cc: use const_cast.
	* Makefile.am: add iconv library.

2004-01-15  Alexander V. Lukyanov <lav@yars.free.net>

	* buffer.cc: use ICONV_CONST.
	* FileCopy.cc: workaround solaris nfs bug in case of ENOSPC.

2004-01-15  Glenn Maynard <g_ld@zewt.org>

	* buffer.cc: include errno.h early.

2004-01-14  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.cc: set entity size at end of transfer too, in case it was
	  not known at the beginning.
	* SFtp.cc: don't use non-portable S_IAMB macro.
	* buffer.cc, buffer.h: fixed translation by adding bool from_untranslated;
	  new class IOBufferStacked.
	* ftpclass.cc: don't disconnect on some temporary errors, just re-send
	  the command after delay; (IOBufferTelnet) new class; use it;
	  (telnet_layer_send) new member; add site utime support; better status
	  for FEAT negotiation; add overloaded MDTM support.
	* resource.cc: (ftp:use-site-utime, ftp:use-mdtm-overloaded) new settings.

2004-01-14  Alexander V. Lukyanov <lav@yars.free.net>

	* ProcWait.cc: don't call NonFatalError, as it causes ProcWait to spin.
	* commands.cc: fix compilation with IRIX compiler.

2003-12-22  Alexander V. Lukyanov <lav@yars.free.net>
